Fix security issue

--- a/views/menuViews/checkout.ejs
+++ b/views/menuViews/checkout.ejs
@@ -97,6 +97,8 @@
             <button id="payNow" type="submit" style="border: none; background-color: lightgray;"><img src="https://www.payfast.co.za/images/buttons/light-small-paynow.png" width="165" height="36" alt="Pay" title="Pay Now with PayFast" /></button>
             <input  class="btn btn-primary boredomBtn return"type="reset" value="Reset">
         </div>
+        <br>
+        <p>All payments go through <a href="www.payfast.co.za">Payfast</a>. At no time does Boredom Busters have access to your banking or credit card details  </p>
         </form>      
     </div>
 </section>
