--- a/views/menuViews/paymentSuccessful.ejs
+++ b/views/menuViews/paymentSuccessful.ejs
@@ -4,8 +4,7 @@
         <br><br>
         <h1  id="heading" style="text-align: center;"><img src="/images/heart_PNG51352.png" alt="Logo" style="width: 60px;">Payment Succesful!</h1> 
         <br><br><br>
-        <p style="text-align: center">Thank you for your order.</p> 
-
+        <p style="text-align: center"><strong>you for your order.</strong></p> 
         <p style="text-align: center">Your order has been placed. Postnet will Contact you when it arrives.</p><br> 
         <p style="text-align: center">Your invoice has been emailed to you.</p> 
     </div>
